# imgmaster

./: .gitignore  METADATA_FIX_SUMMARY.md  README.md  REFACTORING_CONTEXT.md  demo.py  main.py  out.txt  photo_database.json  pyproject.toml  sample_database.json  sample_database2.json  test_date_parsing.py  test_heic_fix.py  test_keywords_simple.py  test_raf_fix.py  test_raw_detection.py  test_sequences.json  test_sequences2.json  test_serial_fix.py
.serena/: project.yml
models/: __init__.py  metadata.py  photo.py  photo_group.py
repositories/: __init__.py  photo_group_repository.py
services/: __init__.py  database_service.py  error_handling_service.py  exif_merge_service.py  logging_service.py  presentation_service.py  rename_service.py  validation_service.py
tests/: debug_heic_exif.py  test_build_command.py  test_dual_exif_xmp_writing_fixed.py  test_error_handling_service.py  test_exif_merge_service.py  test_heic_fix.py  test_photo.py  test_photo_group.py  test_raf_fix.py  test_repository.py  test_sequence_group_level.py  test_skip_invalid_groups.py  test_xmp_backup.py  test_xmp_uuid_merging.py
tests/manual/: debug_dates.py  debug_test.py  test_chronological.py  test_db_cleanup.py  test_missing_metadata.py  test_sort_logic.py
